# sofa

./: .gitignore  .gitmodules  CMakeLists.txt
.github/:  .gitignore
SofaKernel/modules/SofaBaseVisual/: CMakeLists.txt  VisualModelImpl.cpp
SofaKernel/modules/SofaBaseVisual/src/SofaBaseVisual/: VisualModelImpl.cpp  VisualModelImpl.h
SofaKernel/modules/SofaComponentBase/: CMakeLists.txt
SofaKernel/modules/SofaEigen2Solver/: CMakeLists.txt
SofaKernel/modules/SofaExplicitOdeSolver/: CMakeLists.txt
SofaKernel/modules/SofaSimulationCommon/: CMakeLists.txt
SofaKernel/modules/SofaSimulationGraph/: CMakeLists.txt  DAGNode.cpp  DAGNode.h
applications/SurfLabTIPS/: CMakeLists.txt  SurfLabTIPS.cpp  Visualizer.cpp  Visualizer.hpp  resources.qrc
applications/plugins/SaLua/: CMakeLists.txt  LuaBindings.cpp  LuaBindings.h  LuaController.cpp  LuaController.h  LuaSceneLoader.cpp  LuaSceneLoader.h  salua.cpp  salua.h  salua.txt
applications/plugins/SaLua/examples/: caduceas_and_interactive_dragon.salua  controller_from_xml_example.scn  included_controller_example.lua  node_search.lua  node_search.scn
applications/plugins/SofaDenseSolver/: CMakeLists.txt  LULinearSolver.h  NewMatMatrix.h  NewMatVector.h  SofaDenseSolver.cpp  SofaDenseSolverConfig.cmake.in  initSofaDenseSolver.cpp  initSofaDenseSolver.h
extlibs/: CMakeLists.txt
extlibs/ImpulseBasedDynamics/: CMakeLists.txt
extlibs/ZyBVHModels/: CMakeLists.txt  DistanceComputable.cpp  DistanceComputable.h  Intersectable.cpp  Intersectable.h  ZyBVHModelsConfig.cmake.in
extlibs/ZyBVHModels/Math/: IntervalUtils.cpp  IntervalUtils.h  MathUtils.cpp  MathUtils.h  MathUtils.inl
extlibs/ZyBVHModels/Primitives/: AxisAlignedBox3.cpp  AxisAlignedBox3.h  AxisAlignedBox3.inl  Box3.cpp  Box3.h  Box3.inl  Capsule3.cpp  Capsule3.h  Capsule3.inl  Line2.cpp  Line2.h  Line2.inl  Line3.cpp  Line3.h  Line3.inl  Plane3.cpp  Plane3.h  Plane3.inl  Point3.cpp  Point3.h  Point3.inl  Rectangle3.cpp  Rectangle3.h  Rectangle3.inl  Segment2.cpp  Segment2.h  Segment2.inl  Segment3.cpp  Segment3.h  Segment3.inl  Sphere3.cpp  Sphere3.h  Sphere3.inl  Triangle2.cpp  Triangle2.h  Triangle2.inl  Triangle3.cpp  Triangle3.h  Triangle3.inl  Utils_2D.cpp  (+3 more)
extlibs/ZyBVHModels/Query/: Query.cpp  Query.h  Query2.cpp  Query2.h  Query2.inl
extlibs/ZyGProximity/: CMakeLists.txt
extlibs/ZyGProximity/CyberX3D/: CMakeLists.txt  ChangeLog  CyberX3D.pro  CyberX3DConfig.cmake.in  Makefile  config.h  config.h.in  configure  cx3d-1.0.pc  flex.pri  libtool
extlibs/ZyGProximity/CyberX3D/worlds/: earth_moon.wrl
extlibs/ZyGProximity/cmake/Modules/: FindCudPP.cmake
extlibs/ZyGProximity/cudpp/: CMakeLists.txt
extlibs/ZyGProximity/cudpp/src/cudpp/: CMakeLists.txt  cudppConfig.cmake.in
extlibs/ZyGProximity/cutil/: CMakeLists.txt  cutilConfig.cmake.in
extlibs/ZyGProximity/cutil/src/: cutil.cpp  stopwatch_linux.cpp
extlibs/ZyGProximity/gProximity/: CMakeLists.txt  HelloWorld_Kernel.cu  HelloWorld_Kernel.h  Makefile  Makefile.gProximity  Matrix.cpp  Matrix.h  ObbTreeGPU_LinearAlgebra.cuh  Triangle.h  Utility.h  Vector2.h  Vector3.h  bvh_kernels.cu  bvh_kernels.h  bvh_kernels_split.cu  bvh_parallelupdate.cu  bvh_parallelupdate_local.cu  cpu_bvh_constru.cpp  cpu_bvh_constru.h  cuda_aabb.h  cuda_aabbnode.h  cuda_aabbsplit.h  cuda_bvh_constru.cu  cuda_bvh_constru.h  cuda_bvh_constru_split.cu  cuda_bvh_constru_state.cu  cuda_bvhexports.cu  cuda_bvhexports.h  cuda_collision.cu  cuda_collision.h  cuda_debug_info.h  cuda_defs.h  cuda_intersect_nodes.h  cuda_intersect_tree.h  cuda_intersect_tritri.h  cuda_make_grid.cpp  cuda_make_grid.h  cuda_minmax.h  cuda_obb.h  cuda_prefix.h  (+33 more)
extlibs/ZyGProximity/zycudpp/: CMakeLists.txt
extlibs/ZyGProximity/zycutil/: CMakeLists.txt
extlibs/ZyGProximity/zycutil/src/: bank_checker.cpp  cmd_arg_reader.cpp  multithreading.cpp  stopwatch.cpp
extlibs/ZyPQP/: CMakeLists.txt  ZyPQPConfig.cmake.in
extlibs/ZyPQP/include/: BV.h  PQP_Compile.h  PQP_Internal.h
extlibs/ZyPQP/src/: BV.cpp  Build.cpp  PQP.cpp
extlibs/ZySPModels/: CMakeLists.txt  SPModelBase.cpp  SPModelBase.h  ZySPModelsConfig.cmake.in
extlibs/ZyWorkerThreads/: CMakeLists.txt  ZyWorkerThreadsConfig.cmake.in
extlibs/ext-discregrid/: CMakeLists.txt
extlibs/ext-discregrid/cmd/discrete_field_to_bitmap/: CMakeLists.txt
extlibs/ext-discregrid/cmd/generate_density_map/: CMakeLists.txt
extlibs/ext-discregrid/cmd/generate_sdf/: CMakeLists.txt
extlibs/ext-discregrid/discregrid/: CMakeLists.txt  DiscregridConfig.cmake.in
extlibs/fcl/src/: CMakeLists.txt
extlibs/position-based-dynamics/: CMakeLists.txt
extlibs/position-based-dynamics/PositionBasedDynamics/: CMakeLists.txt  PositionBasedDynamicsConfig.cmake.in
extlibs/position-based-dynamics/Simulation/: CMakeLists.txt  SimulationConfig.cmake.in
extlibs/position-based-dynamics/Utils/: CMakeLists.txt  UtilsConfig.cmake.in
modules/SofaBoundaryCondition/: CMakeLists.txt  FixedConstraint.h  FixedConstraint.inl  TrianglePressureForceField.inl
modules/SofaBoundaryCondition/SofaBoundaryCondition_test/: CMakeLists.txt
modules/SofaComponentGeneral/: CMakeLists.txt
modules/SofaConstraint/: CMakeLists.txt  FreeMotionAnimationLoop.cpp  LMDNewProximityIntersection.cpp  PrecomputedConstraintCorrection.inl  SlidingConstraint.h
modules/SofaGeneralAnimationLoop/: CMakeLists.txt
modules/SofaGeneralExplicitOdeSolver/: CMakeLists.txt
modules/SofaGeneralImplicitOdeSolver/: CMakeLists.txt
modules/SofaGeneralLoader/: CMakeLists.txt
modules/SofaGeneralRigid/: ArticulatedHierarchyContainer.h  ArticulatedHierarchyContainer.inl  ArticulatedSystemMapping.inl  CMakeLists.txt
modules/SofaMiscEngine/: CMakeLists.txt
modules/SofaNonUniformFem/: CMakeLists.txt
modules/SofaOpenglVisual/: CMakeLists.txt
modules/SofaOpenglVisual/src/SofaOpenglVisual/: OglModel.cpp  OglModel.h  initSofaOpenGLVisual.cpp  initSofaOpenGLVisual.h
modules/SofaSparseSolver/: CMakeLists.txt
modules/SofaSparseSolver/src/SofaSparseSolver/: initSofaSparseSolver.cpp  initSofaSparseSolver.h
modules/SofaTopologyMapping/: CMakeLists.txt
(+1145 files in other folders)
