cmake_minimum_required(VERSION 3.1)
project(SofaConstraint)

################################ COMPONENTS HERE ARE THE NG-SET ####################################

set(HEADER_FILES
    config.h
    initConstraint.h
)

set(SOURCE_FILES
    initConstraint.cpp
)

############################## COMPONENTS HERE ARE THE FULL-SET ####################################
if(SOFA_BUILD_FULLSETCOMPONENTS)
    list(APPEND HEADER_FILES
        BilateralConstraintResolution.h
        BilateralInteractionConstraint.h
        BilateralInteractionConstraint.inl
        ConstraintAnimationLoop.h
        ConstraintAttachBodyPerformer.h
        ConstraintAttachBodyPerformer.inl
        ConstraintSolverImpl.h
        ContactDescription.h
        FreeMotionAnimationLoop.h
        FrictionContact.h
        FrictionContact.inl
        GenericConstraintCorrection.h
        GenericConstraintCorrection.inl
        GenericConstraintSolver.h
        LCPConstraintSolver.h
        LinearSolverConstraintCorrection.h
        LinearSolverConstraintCorrection.inl
        LMDNewProximityIntersection.h
        LMDNewProximityIntersection.inl
        LocalMinDistance.h
        LocalMinDistance.inl
        PrecomputedConstraintCorrection.h
        PrecomputedConstraintCorrection.inl
        SlidingConstraint.h
        SlidingConstraint.inl
        StickContactConstraint.h
        StickContactConstraint.inl
        UncoupledConstraintCorrection.h
        UncoupledConstraintCorrection.inl
        UnilateralInteractionConstraint.h
        UnilateralInteractionConstraint.inl
        )
    list(APPEND SOURCE_FILES
        BilateralInteractionConstraint.cpp
        ConstraintAnimationLoop.cpp
        ConstraintAttachBodyPerformer.cpp
        ConstraintSolverImpl.cpp
        FreeMotionAnimationLoop.cpp
        FrictionContact.cpp
        GenericConstraintCorrection.cpp
        GenericConstraintSolver.cpp
        LCPConstraintSolver.cpp
        LinearSolverConstraintCorrection.cpp
        LMDNewProximityIntersection.cpp
        LocalMinDistance.cpp
        PrecomputedConstraintCorrection.cpp
        SlidingConstraint.cpp
        StickContactConstraint.cpp
        UncoupledConstraintCorrection.cpp
        UnilateralInteractionConstraint.cpp
        )
    message(STATUS "SofaConstraint: build all maintained sofa components.")
else()
    message(STATUS "SofaConstraint: build with only the minimal set of components.")
endif()

############################### COMPONENTS HERE ARE DEPRECATED ####################################
if(SOFA_BUILD_DEPRECATEDCOMPONENTS)
    message(STATUS "SofaConstraint: build with deprecated components.")
    list(APPEND HEADER_FILES
        StopperConstraint.h
        StopperConstraint.inl
        )
    list(APPEND SOURCE_FILES
        StopperConstraint.cpp
        )
else()
    message(STATUS "SofaConstraint: build without deprecated components.")
endif()

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC SofaMeshCollision SofaSimpleFem SofaImplicitOdeSolver SofaUserInteraction SofaBaseLinearSolver)
target_link_libraries(${PROJECT_NAME} PUBLIC SofaEigen2Solver)
set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-DSOFA_BUILD_CONSTRAINT")
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")

sofa_install_targets(SofaGeneral ${PROJECT_NAME} ${PROJECT_NAME})
